Notebooks das últimas aulas do curso

--- a/Aula 06/Estruturas_de_repetição.ipynb
+++ b/Aula 06/Estruturas_de_repetição.ipynb
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,115 @@
        "['Grêmio', 'Cruzeiro', 'Flamengo', 'Atlético']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_times = ['Atlético', 'Flamengo', 'Cruzeiro', 'Grêmio']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Grêmio', 'Cruzeiro', 'Flamengo', 'Atlético']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_times[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Atlético', 'Flamengo', 'Cruzeiro', 'Grêmio']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in 0,6:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Grêmio', 'Cruzeiro', 'Flamengo', 'Atlético']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(reversed(lista_times))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Atlético', 'Flamengo', 'Cruzeiro', 'Grêmio']"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3954,13 +4062,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -6940,13 +7041,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -9445,13 +9539,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -12450,13 +12537,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -15454,13 +15534,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -18458,13 +18531,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -20963,13 +21029,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -23766,13 +23825,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -25972,13 +26024,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -28476,13 +28521,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -31281,13 +31319,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -33986,13 +34017,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -36160,13 +36184,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -38996,13 +39013,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -42001,13 +42011,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -45006,13 +45009,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -47511,13 +47507,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -50516,13 +50505,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -53521,13 +53503,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -56526,13 +56501,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -59531,13 +59499,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -62036,13 +61997,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -64541,13 +64495,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -67046,13 +66993,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -70051,13 +69991,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -73056,13 +72989,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -76061,13 +75987,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -79066,13 +78985,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -82071,13 +81983,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -85076,13 +84981,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -88081,13 +87979,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -91086,13 +90977,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -94091,13 +93975,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -97096,13 +96973,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -100101,13 +99971,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -102606,13 +102469,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -105111,13 +104967,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -108116,13 +107965,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -111121,13 +110963,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -113626,13 +113461,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -116631,13 +116459,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -120135,13 +119956,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -123140,13 +122954,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -125645,13 +125452,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -128650,13 +128450,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -131155,13 +130948,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -134160,13 +133946,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -137165,13 +136944,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -140170,13 +139942,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -143174,13 +142939,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -145679,13 +145437,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -149184,13 +148935,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -151688,13 +151432,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -154193,13 +153930,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -157198,13 +156928,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -160203,13 +159926,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -163208,13 +162924,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -165469,13 +165178,6 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -168217,13 +167919,65 @@
       "Olá\n",
       "Olá\n",
       "Olá\n",
-      "Olá\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
+      "Olá\n",
       "Olá\n",
       "Olá\n",
       "Olá\n",
@@ -169881,22 +169635,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 4, 9, 16]"
+       "[0, 1, 8, 27, 64]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista4 = [i ** 2 for i in range(5)]\n",
+    "lista4 = [i ** 3 for i in range(5)]\n",
     "lista4"
    ]
   },
@@ -170393,7 +170147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
