--- a/Aula 07/Manipulacao_strings.ipynb
+++ b/Aula 07/Manipulacao_strings.ipynb
@@ -13,6 +13,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [1, 2, 3, 4, 5]\n",
+    "#lista.reverse()\n",
+    "lista[-1::]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "hide_input": true
