--- a/Gerador_valores.ipynb
+++ b/Gerador_valores.ipynb
@@ -4,39 +4,53 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(2.68, 'Perdida'), (2.31, 'Ganha'), (1.9, 'Ganha'), (2.99, 'Ganha'), (1.33, 'Ganha'), (2.06, 'Ganha')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import random\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lista_ = [(round(random.uniform(1, 3),2), random.choice(['Ganha', 'Perdida'])) for i in range(6)]\n",
     "print(lista_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[195.99, 109.54, 196.79, 85.23, 189.16, 61.94]"
+       "[57.31,\n",
+       " 114.57,\n",
+       " 96.39,\n",
+       " 112.19,\n",
+       " 72.25,\n",
+       " 157.87,\n",
+       " 187.94,\n",
+       " 57.64,\n",
+       " 103.94,\n",
+       " 164.91,\n",
+       " 93.51,\n",
+       " 137.93,\n",
+       " 68.72,\n",
+       " 122.63,\n",
+       " 55.97]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista_apostas = [round(random.uniform(50, 200),2) for i in range(6)]\n",
+    "lista_apostas = [round(random.uniform(50, 200),2) for i in range(15)]\n",
     "lista_apostas"
    ]
   },
